# hello_rust

./: build.rs  default.nix  flake.nix
.cargo/: config.toml
embassy/: Cargo.toml  build.rs
embassy/.cargo/: config.toml
generic/: Cargo.toml
generic/src/: main.rs
src/: main.rs
