[package]
edition = "2021"
name = "embassy-stm32f1-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }

embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers"
] }

embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768"
] }

embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
  "nightly",
  "defmt",
  "stm32f103c8",
  "unstable-pac",
  "memory-x",
  "time-driver-any",
  "unstable-traits"
] }

embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"

[profile.dev]
opt-level = "s"
