[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
embedded-hal = "0.2.7"
nb = "1.1.0"

[dependencies.stm32f1xx-hal]
version = "0.5.2"
features = ["stm32f100", "rt"]
